# trisiel

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  Rocket.toml.example  default.nix  shell.nix
executor/: Cargo.toml
executor/src/: main.rs
lib/rocket_upload/: Cargo.toml
lib/rocket_upload/src/: lib.rs
migrations/2020-10-26-160352_users/: up.sql
migrations/2020-10-26-163220_within_user_admin/: down.sql  up.sql
migrations/2020-10-26-202745_gitea_tokens/: up.sql
migrations/2020-10-27-195721_api-tokens/: up.sql
migrations/2020-10-28-190823_handlers/: down.sql  up.sql
migrations/2020-10-30-150242_handler-config/: down.sql  up.sql
migrations/2020-10-31-003309_executions/: down.sql  up.sql
migrations/2020-10-31-023054_handler-human-name-unique/: down.sql  up.sql
nix/: sources.json
scripts/: devel_db.sh
src/: api.rs  b2.rs  gitea.rs  jwt.rs  lib.rs  main.rs  models.rs  schema.rs
src/api/: handler.rs  mod.rs  token.rs  user.rs
