[package]
name = "wasmcloud_executor"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
rocket = "0.4"
jwt = "0.11"
lazy_static = "1.4"
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.2"
ureq = { version = "1", features = ["json", "charset"] }
url = "2"
uuid = { version = "0.7", features = ["serde", "v4"] }

wasmcloud = { path = ".." }

[dependencies.diesel]
version = "1"
features = ["postgres", "r2d2", "uuidv07", "chrono"]

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool", "uuid"]
