[package]
name = "rocket_upload"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
mime = "0.3"
multipart = "0.17"
tracing = "0.1"
